--- a/style.css
+++ b/style.css
@@ -1,58 +1,75 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: Georgia, sans-serif;
-    font-weight: normal;
-}
-
-body {
+*{
+    margin:0;
     padding: 0;
-    margin: 0;
+    box-sizing: border-box;
+}
+
+body{
+    height: 100vh;
     background: linear-gradient(to right, red, green);
-}
-
-.calculator-grid {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    min-height: 100vh;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-}
-
-.calculator-grid > button {
-    cursor: pointer;
-    font-size: 2rem;
-    border: 1px solid white;
-    outline: none;
-    background-color: rgba(255, 255, 255, .75);
-}
-
-.calculator-grid > button:hover {
-    background-color: rgba(255, 255, 255, .9);
-}
-
-.span-two {
-    grid-column: span 2;
-}
-
-.output {
-    grid-column: 1 / -1;
-    background-color: rgba(0, 0, 0, .75);
     display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    flex-direction: column;
-    padding: 10px;
-    word-wrap: break-word;
-    word-break: break-all;
+    justify-content: center;
+    align-items: center;
 }
 
-.output .previous-operand {
-    color: rgba(255, 255, 255, .75);
-    font-size: 1.5rem;
+.calculator{
+    width: 25%;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: right;
+    box-shadow: 7px 7px 7px rgba(0,0,0,0.5);
 }
 
-.output .current-operand {
+.display{
+    width: 100%;
+    height: 20vh;
+    background: black;
     color: white;
-    font-size: 2.5rem;
+
+}
+
+.input{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+button{
+    border:none;
+    background-color: white;
+    padding:1.6rem;
+    font-size: 22px;
+    transition: all 0.3s ease-in-out;
+}
+
+button:hover{
+    font-weight: bold;
+}
+
+
+.output{
+    font-size: 28px;
+    padding: 25px;
+}
+
+.result{
+    font-size: 18px;
+    padding: 25px;
+}
+
+@keyframes big{
+    0%{
+        font-size: 18px;
+    }
+    100%{
+        font-size: 30px;
+    }
+}
+
+@keyframes small{
+    0%{
+        font-size: 28px;
+    }
+    100%{
+        font-size: 18px;
+    }
 }
